copy files to src/ and install parcel, and fix issue where modal is not centered in dev build

--- a/src/style.css
+++ b/src/style.css
@@ -22,8 +22,7 @@
   border-radius: 0.5rem;
   top: 50%;
   left: 50%;
-  translate: -50% -50%;
-  transform: scale(0);
+  transform: translate(-50%, -50%) scale(0);
   transition: transform var(--modalAndOverlay-transition-duration) ease;
   width: var(--modal-container-width);
   z-index: 100;
@@ -85,7 +84,7 @@
 }
 
 [data-modal-container].active {
-  transform: scale(1);
+  transform: translate(-50%, -50%) scale(1);
 }
 
 [data-modal-overlay].active {
